# clarifier

./: README.md  development.env  docker-compose.yaml
backend/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/backend/backend/: api.py  settings.py
backend/backend/backend/utils/: __init__.py
backend/backend/profiling/: models.py
backend/backend/profiling/migrations/: 0001_initial.py  0002_add_dama_dimensions.py  0003_add_drl_dimensions.py
backend/backend/sources/: models.py
backend/backend/sources/api/: __init__.py  schemas.py
backend/backend/sources/migrations/: 0001_initial.py  0002_attach_source_to_workspace.py
backend/backend/sources/tasks/: __init__.py
backend/backend/workspace/: models.py
backend/backend/workspace/api/: __init__.py
backend/backend/workspace/migrations/: 0001_initial.py  0002_workspace_dimensions.py
config/: config.env
engine/: pyproject.toml
engine/engine/engine/: asgi.py  settings.py  wsgi.py
frontend/: Dockerfile  Dockerfile.development  Dockerfile.production  bun.lockb  package-lock.json  package.json  tailwind.config.ts
frontend/src/: app.css
frontend/src/lib/: globals.ts
frontend/src/lib/components/: BackButton.svelte
frontend/src/lib/stores/: workspace.ts
frontend/src/lib/types/: source.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/source/: +page.server.ts  (+1 more)
storage/: README.md  pyproject.toml
storage/storage/storage/: asgi.py  settings.py  wsgi.py
workflow/: .dockerignore  pyproject.toml
workflow/workflow/workflow/: asgi.py  settings.py
(+33 files in other folders)
